@startuml DB_Diagram

' hide the spot
hide circle

' avoid problems with angled crows feet
skinparam linetype ortho

entity "Shooter" as e01 {
  *e1_id : number <<generated>>
  --
  *First_Name : text
  *Last_Name : text
  *Status : text
  description : text
  is_coach : number
}

entity "Shooter_Pins" as e04 {
  *e4_id : number <<generated>>
  --
  *e1_id : neumber <<FK>>
  *1e_id : neumber <<FK>>
  description : text
  
}

entity "Pins" as e05 {
  *e5_id : number <<generated>>
  --
  *Pin_Name : text
  description : text
}


entity "Equipment" as e03 {
  *e3_id : number <<generated>>
  --
  Equipment_Type : text
  Equipment_Manufacturer : text

  other_details : text
}

e01 ||..o{ e02
e01 |o..o{ e03

@enduml